--- a/Tpl/Admin/Default/Setting/index.html
+++ b/Tpl/Admin/Default/Setting/index.html
@@ -1,38 +1,21 @@
+<script type="text/javascript">
+    window.UEDITOR_HOME_URL = "__PUBLIC__/Lib/ueditor/";
+</script>
+<script type="text/javascript" charset="utf-8" src="__PUBLIC__/Lib/ueditor/editor_all.js"></script>
+<script type="text/javascript" charset="utf-8" src="__PUBLIC__/Lib/ueditor/editor_config.js"></script>
 <div class="rounded table" style="width: 98%;border: 0px;" >
 
-<!-- start -->
-<div class="nav">
-	<ul class="cc">
-		<li class="current"><a href="http://phpwind.cn/admin.php?m=config&amp;c=config">站点信息</a></li>
-		<li><a href="http://phpwind.cn/admin.php?m=config&amp;c=config&amp;a=site">全局参数</a></li>
-	</ul>
-</div>
-<form action="{:U('Admin/Links/doSaveLinks')}" method="post" class="formvalidate">
+    <!-- start -->
+    <div class="nav">
+        <ul class="cc">
+            <li class="current"><a href="{:U('Admin/Setting/index')}">站点信息</a></li>
+            <li><a href="{:U('Admin/Setting/Global')}">全局参数</a></li>
+        </ul>
+    </div>
+    <form action="{:U('Admin/Links/doSaveLinks')}" method="post" class="formvalidate">
         <table class="list" cellpadding="0" cellspacing="1" border="0">
             <tbody>
-                <tr>
-                    <td class="name" width="150">
-                        <label class="validation">
-                            <span class="spanMsg">*</span>链接类型：
-                        </label>
-                    </td>  
-                    <td class="rowform select_type">
-                        <ul>
 
-                            <li>
-                                <label>
-                                    <input type="radio" checked="checked" value="0" name="type">文字链接</label>
-                            </li>
-                            <li>
-                                <label>
-                                    <input type="radio" value="1" name="type">图片链接</label>
-                            </li>
-                        </ul>
-                    </td>
-                    <td class="field">
-                        <img title="请选择您的模板支持的链接类型" class="title2div" src="__PUBLIC__/Admin/images/icons/icon_help.png" width="16" height="16">				
-                    </td>
-                </tr>
                 <tr>
                     <td class="name">
                         <label class="validation"><span class="spanMsg">*</span>网站名称：</label>
@@ -44,61 +27,58 @@
                 </tr>
                 <tr>
                     <td class="name">
-                        <label class="validation">链接颜色：</label>
+                        <label class="validation"><span class="spanMsg">*</span>SEO关键字：</label>
                     </td>
                     <td>
-                        <input type="text" name="color" id="color" value="" class="input rounded iColorPicker" size="10">
-                        <a href="javascript:void(0)" id="select_color" onclick="iColorShow('color','select_color')" class="icon_select">
-                            <img src="__PUBLIC__/Admin/images/color.png" align="absmiddle">
-                        </a>
+                        <input type="text" class="input rounded" name="name" size="50" value="" style="width:300px;" required validate="{ required:true,maxlength:30}">
                     </td>
                     <td class="field">
-                        <img title="链接名称链接颜色，只对文字链接时有效，留空将采用全局链接样式" class="title2div" src="__PUBLIC__/Admin/images/icons/icon_help.png" width="16" height="16">				
+                        <img title="用逗号隔开，主要用于网站首页及一些插件页缺省关键字。" class="title2div" src="__PUBLIC__/Admin/images/icons/icon_help.png" width="16" height="16">
                     </td>
                 </tr>
                 <tr>
-                    <td class="name" width="150">
-                        <label class="validation"><span class="spanMsg">*</span>链接地址：</label>
-                    </td>
-                    <td><input type="text" class="input rounded" name="link_url" id="link_url" size="30" value="http://" style="width:300px;" required validate="{ required:true}"></td>
-                    <td class="field"></td>
-                </tr>
-                
-                <tr id="image_url" style="display: none;">
                     <td class="name">
-                        <label class="validation"><span class="spanMsg">*</span>链接图片：</label>
-                    </td>
-                    <td>
-                        <input type="text" class="input rounded" name="image_path" id="image_path" size="30" value="" style="float: left;width: 300px;">  
-                        <a href="javascript:upImage('image_path');" id="button1" value="" class="type-file-button"></a>
-
-                    </td>
-                    <td class="field"></td>
-                </tr>
-                <tr>
-                    <td class="name">
-                        <label class="validation">描述：</label>
+                        <label class="validation"><span class="spanMsg">*</span>SEO描述：</label>
                     </td>
                     <td>
                         <textarea name="description" class="rounded" style="width:300px; height:60px; padding:5px;"></textarea> 
                     </td>
-                    <td class="field"><img title="描述。" class="title2div" src="__PUBLIC__/Admin/images/icons/icon_help.png" width="16" height="16">				</td>
+                    <td class="field"></td>
+                </tr>
+                <tr id="image_url">
+                    <td class="name">
+                        <label class="validation"><span class="spanMsg">*</span>网站LOGO：</label>
+                    </td>
+                    <td>
+                        <input type="text" class="input rounded" name="image_path" id="image_path" size="30" value="" style="float: left;width: 300px;">  
+                        <a href="javascript:upImage('image_path');" id="button1" value="" class="type-file-button"></a>
+                    </td>
+                    <td class="field"></td>
                 </tr>
                 <tr>
                     <td class="name">
-                        <label class="validation"><span class="spanMsg">*</span>排序：</label>
+                        <label class="validation"><span class="spanMsg">*</span>ICP证书号：</label>
                     </td>
                     <td>
-                        <input type="text" name="order" value="10" class="input rounded" size="10">  
+                        <input type="text" class="input rounded" name="name" size="50" value="" style="width:300px;" required validate="{ required:true,maxlength:30}">
+                    </td>
+                    <td class="field"></td>
+                </tr>
+                <tr>
+                    <td class="name">
+                        <label class="validation">版权信息：</label>
+                    </td>
+                    <td>
+                        <textarea name="description" class="rounded" style="width:300px; height:60px; padding:5px;"></textarea> 
                     </td>
                     <td class="field">
-
+                        <img title="描述。" class="title2div" src="__PUBLIC__/Admin/images/icons/icon_help.png" width="16" height="16">
                     </td>
                 </tr>
                 <tr>
                     <td class="name" width="150">
                         <label class="validation">
-                            <span class="spanMsg">*</span>状态：
+                            <span class="spanMsg">*</span>网站状态：
                         </label>
                     </td>  
                     <td class="rowform">
@@ -106,17 +86,26 @@
 
                             <li>
                                 <label>
-                                    <input type="radio" checked="checked" value="1" name="status">启用</label>
+                                    <input type="radio" value="1" checked="checked" name="status">开启</label>
                             </li>
                             <li>
                                 <label>
-                                    <input type="radio" value="0" name="status">停用</label>
+                                    <input type="radio"  value="0" name="status">关闭</label>
                             </li>
                         </ul>
                     </td>
                     <td class="field">
                         <img title="当链接状态为停用时,将不再前台显示" class="title2div" src="__PUBLIC__/Admin/images/icons/icon_help.png" width="16" height="16">				
                     </td>
+                </tr>
+                <tr id="closeHelp" style="display: none;">
+                    <td class="name">
+                        <label class="validation"><span class="spanMsg">*</span>关闭说明：</label>
+                    </td>
+                    <td>
+                        <textarea name="description" class="rounded" style="width:300px; height:60px; padding:5px;">网站关闭中...</textarea> 
+                    </td>
+                    <td class="field"></td>
                 </tr>
             </tbody>
         </table>
@@ -131,6 +120,18 @@
             </tbody>
         </table>
     </form>
-<!-- end -->
+    <!-- end -->
 
 </div>
+<script>
+    $(document).ready(function(){
+        $(".rowform input[name='status']").click(function(){
+            var val = $(this).val();
+            if(val == '0'){
+                $("#closeHelp").fadeIn();
+            }else{
+                $("#closeHelp").fadeOut();
+            }
+        });
+    });    
+</script>
