--- a/Tpl/Admin/Default/Index/demo.html
+++ b/Tpl/Admin/Default/Index/demo.html
@@ -3,6 +3,9 @@
 </script>
 <script type="text/javascript" charset="utf-8" src="__PUBLIC__/Lib/ueditor/editor_all.js"></script>
 <script type="text/javascript" charset="utf-8" src="__PUBLIC__/Lib/ueditor/editor_config.js"></script>
+<?php
+    print_r($title);
+?>
 <div class="rounded table" style="width: 98%;">
     <table width="100%" cellpadding="0" cellspacing="0" border="0" class="box_top">
         <thead class="thead">
