--- a/branches/2.1/Tpl/Admin/Default/Role/index.html
+++ b/branches/2.1/Tpl/Admin/Default/Role/index.html
@@ -34,12 +34,9 @@
                     </td>
                     <td class="align-center">
                         <div class="button-group">
-                            <a href="javascript:void(0);"  class="button danger icon pill search" title="查看"></a>
-                            <a href="/admin.php?g=member&amp;m=user&amp;a=edit&amp;id=2" class="button icon pill edit" title="编辑"></a>
-                            <a href="javascript:void(0);"  class="button danger icon pill remove" title="删除"></a>
+                            <a href='{:U("Admin/Role/editRole?id=$list[id]")}'  class="button danger icon pill edit" alt="编辑" title="编辑"></a>
+                            <a href="javascript:void(0);"  data-uri='{:U("Admin/Role/doDelete","id=$list[id]")}' val="{$list[id]}" data-msg="确定要删除“{$list.name}”吗？" data-acttype="ajax" class="button danger icon pill remove dodel" title="删除"></a>
                         </div>
-<!--                        <a href='{:U("Admin/Role/editRole?id=$list[id]")}'><img src="__PUBLIC__/Admin/images/icons/icon_edit.png" alt="编辑" title="编辑" /></a>&nbsp;
-                        <a href='javascript:;' class="dodel" data-uri='{:U("Admin/Role/doDelete","id=$list[id]")}' val="{$list[id]}" data-msg="确定要删除“{$list.name}”吗？" data-acttype="ajax"><img src="__PUBLIC__/Admin/images/icons/icon_square_close.png" alt="删除" title="删除" /></a>-->
                     </td>
                 </tr>
             </volist>
