--- a/branches/2.1/Tpl/Admin/Default/RoleNav/addRoleNav.html
+++ b/branches/2.1/Tpl/Admin/Default/RoleNav/addRoleNav.html
@@ -32,11 +32,11 @@
             <table class="table top_line">
                 <tr>
                     <td align="right" height="60">
-                        <input id="submit" class="submit" type="submit" value="提交">
+                        <input id="submit" class="btn" type="submit" value="提交">
                     </td>
                     <td width="80"></td>
                     <td>
-                        <input type="reset" id="reset" class="submit reset" value="重置">
+                        <input type="reset" id="reset" class="btn reset" value="重置">
                     </td>
                 </tr>
             </table>		
