--- a/branches/2.1/Tpl/Admin/Default/RoleNav/editRoleNav.html
+++ b/branches/2.1/Tpl/Admin/Default/RoleNav/editRoleNav.html
@@ -33,7 +33,7 @@
                 <tr>
                     <td align="right" height="60">
                         <input type="hidden" value="{$data.id}" name="id" />
-                        <input id="submit" class="submit" type="submit" value="提交">
+                        <input id="submit" class="btn" type="submit" value="提交">
                     </td>
                     <td width="80"></td>
                     <td>
