--- a/branches/2.1/Tpl/Admin/Default/System/pageAddAdmin.html
+++ b/branches/2.1/Tpl/Admin/Default/System/pageAddAdmin.html
@@ -196,9 +196,9 @@
         <table class="table top_line">
             <tbody>
                 <tr>
-                    <td align="left" height="60" colspan="2">
-                        <input id="submit" class="submit" type="submit" value="提交">
-                        <input type="reset" id="reset" class="submit reset" value="重置">
+                    <td align="center" height="60" colspan="2">
+                        <input id="submit" class="btn" type="submit" value="提交">
+                            <input type="reset" id="reset" class="btn reset" value="重置">
                     </td>
                 </tr>
             </tbody>
